--- a/config/config-sample.yaml
+++ b/config/config-sample.yaml
@@ -1,7 +1,7 @@
 # bot settings
-bot_token: "YOUR_BOT_TOKEN" # support bot tok                                                                                                             en
-staffchat_id: "SUPERGROUP_CHAT_ID" # eg. -123456789
-owner_id: "YOUR_TELEGRAM_ID"
+bot_token: "5327394595:AAGazH7xM9IA7rAx1_9bCgyQ4KZbtCoG10o" # support bot tok                                                                                                             en
+staffchat_id: "-705252794" # eg. -123456789
+owner_id: "788888101"
 spam_time: 5 * 60 * 1000 # time (in MS) in which user may send 5 messages
 spam_cant_msg: 5
 
